fixed overflow in acitivity page

--- a/css/components.css
+++ b/css/components.css
@@ -438,7 +438,7 @@ a.button {
 }
 
 .stat-box--green {
-	background: linear-gradient(90deg, #a1ecc4 0%, #e6f9ef 100%);
+	background: linear-gradient(90deg, #b2eee2 0%, #e8f8f4 100%);
 }
 
 .stat-label {
